--- a/laba_11/App.xaml
+++ b/laba_11/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:laba_11"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary1.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
