--- a/laba_11/MainWindow.xaml
+++ b/laba_11/MainWindow.xaml
@@ -16,7 +16,7 @@
         <UniformGrid Grid.Row="0" Columns="3">
             <Button Click="DrawTriangle1" Content="Произвольный треугольник" Style="{StaticResource BaseButtonStyle}"></Button>
             <Button Content="Произвольный прямоугольник" Style="{StaticResource BaseButtonStyle}" Click="DrawRectangle1"></Button>
-            <!--<Button Content="Произвольный Кватрат" Style="{StaticResource BaseButtonStyle}" Click="Button_Click"></Button>-->
+            <Button Content="Произвольный Кватрат" Style="{StaticResource BaseButtonStyle}" Click="DrawSquare1"></Button>
         </UniformGrid>
         <UniformGrid Grid.Row="1" Rows="2" Columns="2">
             <TextBlock Text="Сдвиг по X:" Style="{StaticResource NameSpaceTextBlockStyle}"></TextBlock>
